@@ -1,6 +1,7 @@
 package HW2.CreditCardNotification;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class SMSNotification implements NotificationService{
 
@@ -11,7 +12,7 @@ public class SMSNotification implements NotificationService{
 
     @Override
     public void broadcastNotification(List<UserInfo> users, String broadcastMessage) {
-        for (UserInfo user : users.stream().filter(u -> "email".equalsIgnoreCase(u.getPreference())).toList()) {
+        for (UserInfo user : users.stream().filter(u -> "email".equalsIgnoreCase(u.getPreference())).collect(Collectors.toList())) {
             System.out.println(broadcastMessage);
         }
     }
